# libspatial

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_libspatial.c
cmake/: libspatial-config.cmake.in
examples/: arena_example.c  city_search.c  memento_arena_example.c  memento_pool_example.c
include/libspatial/: bsptree.h  bvh.h  hilbertrtree.h  hyperoctree.h  kdtree.h  libspatial.h  octree.h  orthtree.h  quadtree.h  spatial.h  vptree.h
tests/: test_libspatial.c
